# cmake-cpp-barcode-qrcode

./: .gitignore  .travis.yml  BarcodeReader.cxx  BarcodeReaderConfig.h.in  CMakeLists.txt  LICENSE  README.md  bridge.h  dbr.json  license-key.txt
.github/workflows/: cmake.yml  docker-arm64.yml
bridge/: CMakeLists.txt  README.md  bridge.cpp
camera_lib/: README.md
camera_lib/example/: CMakeLists.txt  main.cpp
camera_lib/include/: camera_lib.h
camera_lib/lib/: opencv_videoio480.lib
camera_lib/lib/windows/: opencv_highgui480.lib
camera_lib/src/: CMakeLists.txt  camera_lib.cpp
cvcamera/: CMakeLists.txt
cvcamera/example/: CMakeLists.txt  main.cpp
cvcamera/include/opencv2/: cvconfig.h
cvcamera/lib/windows/: opencv_core480.lib  opencv_imgcodecs480.lib  opencv_imgproc480.lib
examples/10.x/command-line/: CMakeLists.txt  main.cpp  multi_page.tif
examples/10.x/mrz/: CMakeLists.txt  README.md  main.cpp  main.cxx  maincv.cpp
examples/10.x/opencv_camera/: CMakeLists.txt  README.md  main.cxx
examples/10.x/sdk/: ConfusableChars.data  DDN-PresetTemplates.json  DLR-PresetTemplates.json  MRZ.json
examples/10.x/sdk/CharacterModel/: Letter.caffemodel  Letter.prototxt  Letter.txt  Lowercase.caffemodel  Lowercase.prototxt  Lowercase.txt  MRZ.prototxt  Number.caffemodel  NumberLetter.caffemodel  NumberLetter.prototxt  NumberLetter.txt  NumberLowercase.caffemodel  NumberLowercase.txt  NumberUppercase.caffemodel  NumberUppercase.prototxt  NumberUppercase.txt  Uppercase.caffemodel  Uppercase.txt  VIN.txt
examples/10.x/sdk/ParserResources/: AADHAAR.dcpres  AADHAAR_Map.txt  AAMVA_DL_ID.dcpres  AAMVA_DL_ID_WITH_MAG_STRIPE.dcpres  AAMVA_Map.txt  MRTD_Map.txt  MRTD_TD1_ID.dcpres  MRTD_TD2_FRENCH_ID.dcpres  MRTD_TD2_ID.dcpres  MRTD_TD2_VISA.dcpres  MRTD_TD3_PASSPORT.dcpres  MRTD_TD3_VISA.dcpres  SOUTH_AFRICA_DL.dcpres  SOUTH_AFRICA_DL_Map.txt  VIN.dcpres  VIN_Map.txt
examples/10.x/sdk/include/: DynamsoftBarcodeReader.h  DynamsoftCaptureVisionRouter.h  DynamsoftCodeParser.h  DynamsoftCore.h  DynamsoftDocumentNormalizer.h  DynamsoftImageProcessing.h  DynamsoftLabelRecognizer.h  DynamsoftLicense.h  DynamsoftUtility.h
examples/10.x/win32_gui/: BarcodeReader.aps  BarcodeReader.cpp  BarcodeReader.rc  BarcodeReader.sln  BarcodeReader.vcxproj  BarcodeReader.vcxproj.filters  README.md  Resource.h
examples/9.x/command_line/: CMakeLists.txt  main.cxx
examples/9.x/opencv_camera/: main.cxx
examples/9.x/opencv_file/: CMakeLists.txt  main.cxx
examples/9.x/qt/: CMakeLists.txt  README.md  barcodeinfo.cpp  barcodeinfo.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  myvideosurface.cpp  myvideosurface.h  work.cpp  work.h
examples/9.x/raspberry_pi_oled/: CMakeLists.txt  README.md  main.cxx  ssd1306_i2c.c  ssd1306_i2c.h
examples/9.x/rust/: Cargo.toml  README.md  build.rs
examples/9.x/rust/lib/: bridge.cpp  bridge.h
examples/9.x/rust/src/: bindings.rs  main.rs
examples/9.x/webp/: .gitignore  README.md
examples/9.x/webp/cpp/: CMakeLists.txt  main.cxx  unicode.h
examples/9.x/webp/cpp/libwebp-1.2.1/: Makefile.in  configure
examples/9.x/webp/cpp/libwebp-1.2.1/examples/: Makefile.in
examples/9.x/webp/cpp/libwebp-1.2.1/extras/: Makefile.in
examples/9.x/webp/cpp/libwebp-1.2.1/imageio/: Makefile.in
examples/9.x/webp/cpp/libwebp-1.2.1/man/: Makefile.in
examples/9.x/webp/cpp/libwebp-1.2.1/src/dec/: webp_dec.c
examples/9.x/webp/cpp/libwebp-1.2.1/src/webp/: decode.h
examples/9.x/webp/python/: main.py
examples/qt_mrz/: .gitignore  CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui  mrzinfo.cpp  mrzinfo.h  myvideosurface.cpp  myvideosurface.h  work.cpp  work.h
examples/qt_mrz/include/: DynamsoftCore.h  DynamsoftLabelRecognizer.h
examples/qt_mrz/model/: MRZ.caffemodel  MRZ.txt
examples/qt_mrz/platform/windows/lib/: DynamsoftLabelRecognizerx64.lib
examples/qt_mrz/template/: MRZ.json
images/: AllSupportedBarcodeTypes.tif  Code 128.tif  Code 39.tif  Interleaved 2of 5.tif
include/: DynamsoftBarcodeReader.h  DynamsoftCaptureVisionRouter.h  DynamsoftCodeParser.h  DynamsoftCommon.h  DynamsoftCore.h  DynamsoftDocumentNormalizer.h  DynamsoftLabelRecognizer.h  DynamsoftLicense.h  DynamsoftUtility.h  bridge.h  test.h
litecam/: CMakeLists.txt  README.md
litecam/examples/barcode/: CMakeLists.txt  main.cpp  main_thread.cpp
litecam/include/: Camera.h  CameraPreview.h
litecam/src/: Camera.h  CameraLinux.cpp  CameraMacOS.mm  CameraPreviewLinux.cpp  CameraPreviewMacOS.mm  CameraPreviewWindows.cpp  CameraWindows.cpp  main.cpp
templates/: balanced.json  coverage.json  custom.json  default.settings.json  morecoverage.json  mostcoverage.json  speed.json  tpl_custom.json
